force-app/main/default/objects/Field_Mappings__c/Field_Mappings__c.object-meta.xml
<CustomObject>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>Field Map-{00000000}</displayFormat>
        <label>Field Mappings No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>