force-app/main/default/objects/Field_Mappings__c/fields/Calculated__c.field-meta.xml
<CustomField>
    <fullName>Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculated?</label>
    <type>Checkbox</type>
</CustomField>