force-app/main/default/objects/Field_Mappings__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>30</length>
    <type>Text</type>
</CustomField>