force-app/main/default/objects/Field_Mappings__c/fields/Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field__c</fullName>
    <formula>IF(Source_Field__c = &apos;Vendor_Name__c&apos;, FALSE, 
IF(
AND(
!BEGINS(Source_Field__c,&apos;sustain_app__&apos;),
OR(
CONTAINS(RIGHT(Source_Field__c,3) ,&apos;__c&apos;),
CONTAINS(RIGHT(Source_Field__c,3) ,&apos;__s&apos;)
)
),
TRUE, FALSE)
)</formula>
    <label>Custom Field</label>
    <type>Checkbox</type>
</CustomField>