force-app/main/default/objects/Field_Mappings__c/fields/Field_Created__c.field-meta.xml
<CustomField>
    <fullName>Field_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Created</label>
    <type>Checkbox</type>
</CustomField>