force-app/main/default/objects/Field_Mappings__c/fields/Mapping_Included__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Included__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mapping Included</label>
    <type>Checkbox</type>
</CustomField>