force-app/main/default/objects/Field_Mappings__c/fields/New_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Field</label>
    <type>Checkbox</type>
</CustomField>