force-app/main/default/objects/Field_Mappings__c/fields/Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Object_Mapping__c</fullName>
    <label>Object Mapping</label>
    <referenceTo>Object_Mappings__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>