force-app/main/default/objects/Field_Mappings__c/fields/Static_Field_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Static_Field_Indicator__c</fullName>
    <formula>Source_Field__c  =  &apos;Target_SFDC_ID__c&apos;  || Source_Field__c  = &apos;Error_Details__c&apos; || Source_Field__c  = &apos;Migration_Status__c&apos; || Source_Field__c  = &apos;Source_Record_ID__c&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Static Field Indicator</label>
    <type>Checkbox</type>
</CustomField>