force-app/main/default/objects/Field_Mappings__c/fields/Target_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Label__c</fullName>
    <label>Target Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>