force-app/main/default/objects/Field_Mappings__c/fields/To_Review__c.field-meta.xml
<CustomField>
    <fullName>To_Review__c</fullName>
    <formula>AND(Custom_Field__c, NOT( Mapping_Included__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Review</label>
    <type>Checkbox</type>
</CustomField>