force-app/main/default/objects/Field_Mappings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Source_Field__c</columns>
    <columns>Source_Field_Type__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Target_Field_Type__c</columns>
    <columns>Object_Mapping__c</columns>
    <columns>Calculated__c</columns>
    <columns>Custom_Field__c</columns>
    <columns>New_Field__c</columns>
    <columns>Mapping_Included__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>